Fix bg color on mobile

--- a/_sass/classes.sass
+++ b/_sass/classes.sass
@@ -28,6 +28,8 @@
 .indexBody
   background-color:rgb(255,255,255)
   text-align:justify
+  margin: 5px 5px
+  padding: 5px 5px
 
 
 /* Landscape tablets and medium desktops */
@@ -41,9 +43,7 @@
     row-gap: 5px 
     margin: 5px 5px
     justify-content: right
-
     
-
   .icon
     fill: $orange-color
     color: $orange-color
